--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ body {
       rgba(255, 255, 255, 0.6),
       rgba(250, 250, 250, 0.6)
     ),
-    url("https://png.pngtree.com/background/20250130/original/pngtree-spring-floral-watercolor-fresh-and-simple-picture-image_15150779.jpg")
-      no-repeat center center fixed;
+    url("https://i.postimg.cc/5N8W8gQd/6686750.jpg") no-repeat center center
+      fixed;
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
